--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
           </div>
           <div class="text-container">
             <h5>Generate dynamic 2D documentation</h5>
-            <p>Turn your 2D sketch into a 3D project ready for visualization. Generate 2D technical plans from the 3D model and add dimensions, labels, tags, plant photos and other annotations to get the project ready for documentation. Produce irrigation plans, setting out plans and use the layer manager to organize your project. Use the listing tools to generate quantity take-offs for plants, urban furniture elements, zones or volume of cuts and fills from terrain operations.</p>
+            <p>Turn your 2D sketch into a 3D project ready for visualization. Generate 2D technical plans from the 3D model and add dimensions, labels, tags, plant photos and other annotations to get the project ready for documentation. Produce different layouts such as setting out plan, irrigation, and dimension plan by using the layer manager to organize your project. Use the listing tools to generate quantity take-offs for plants, urban furniture elements, zones or volume of cuts and fills from terrain operations.</p>
           </div>
         </div>
         <div class="item item5 right">
@@ -159,7 +159,7 @@
           </div>
           <div class="text-container">
             <h5>Parametric design</h5>
-            <p>Automate design workflows with vegetation, terrains and civil work elements. Save time by avoiding repetitive tasks, create custom functionalities, test different design options faster…<br>All this is achieved with Grasshopper, a visual programming environment available in the Lands Design version for Rhino.</p>
+            <p>Automate design workflows with vegetation, terrains and civil work elements. Save time by avoiding repetitive tasks, create custom functionalities and test different design options faster.<br>All this is achieved with Grasshopper, a visual programming environment available in the Lands Design version for Rhino.</p>
           </div>
         </div>
 
@@ -168,7 +168,7 @@
             <img replaceSrc="liveTheProject" src="imgs/project-aerial-view.png" alt="">
           </div>
           <div class="text-container">
-            <h5>"Live" your project with animated videos and photorealistic images</h5>
+            <h5>"Live" your project with animated videos and realistic images</h5>
             <p>Present your project with realistic images, virtual tours and animated videos. Walk through the project, play vegetation season change simulation, enable sunlight motion, wind effect and plant growth. In addition, you may apply your desired render engine like Enscape, Lumion, V-Ray, etc.</p>
           </div>
         </div>
@@ -178,7 +178,7 @@
           </div>
           <div class="text-container">
             <h5>Present and share your project with multiple ways of interoperability</h5>
-            <p>The multiple file formats supported by Lands Design let you import and export files with other platforms. Many block libraries from the web are compatible and can be easily integrated into your project. This way you can bring your project into a virtual reality environment, send it to a 3D printer or export it to web browsers, so you can share your project with anyone in their own devices.</p>
+            <p>The multiple file formats supported by Lands Design let you import and export files with other platforms. Many block libraries from the web are compatible and can be easily integrated into your project. In this way, you can bring your project into a virtual reality environment, send it to a 3D printer or export it to web browsers, so you can share your project with anyone to visualize it by his/her own device.</p>
           </div>
         </div>
         <div class="item8 btn-container">
