Alt descriptions added automatically.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="homeStyleExtra.css">
   <link rel="stylesheet" href="homeStyle.css">
-  <title>Lands Design</title>
+  <title>Landscape design advanced solution - Lands Design</title>
+  <meta name="description" content="Lands Design is a software for landscape design in Rhino and AutoCAD. Lands provides tools for producing 2D drawings and 3D models of any landscape project."/>
 </head>
 
 <body class="home">
@@ -27,7 +28,7 @@
       <div class="text-content">
         <h1>Lands Design</h1>
         <h2>ADVANCED SOLUTION<br>FOR LANDSCAPE DESIGN</h2>
-        <h3>FROM TECHNICAL PLANNING TO PHOTOREALISTIC RENDERING.<br>PROFESSIONAL RESULTS FOR LANDSCAPE DESIGN AND URBAN PLANNING.</h3>
+        <h3>FROM TECHNICAL PLANNING TO PHOTOREALISTIC RENDERING<br>PROFESSIONAL RESULTS FOR LANDSCAPE DESIGN AND URBAN PLANNING</h3>
       </div>
       <a id="tryLandsHomeBtn" class="fixed" href="https://stg.lands-design.com/download/">Try Lands Design</a>
     </div>
@@ -146,7 +147,7 @@
         </div>
         <div class="item item4">
           <div>
-            <img replaceSrc="dynamicDoc" src="imgs/project-aerial-view.png" alt="">
+            <img replaceSrc="dynamicDoc" src="imgs/placeholders/placeholder-img.jpg" alt="">
           </div>
           <div class="text-container">
             <h5>Generate dynamic 2D documentation</h5>
@@ -165,7 +166,7 @@
 
         <div class="item item6">
           <div>
-            <img replaceSrc="liveTheProject" src="imgs/project-aerial-view.png" alt="">
+            <img replaceSrc="liveTheProject" src="imgs/placeholders/placeholder-img.jpg" alt="">
           </div>
           <div class="text-container">
             <h5>"Live" your project with animated videos and realistic images</h5>
@@ -174,7 +175,7 @@
         </div>
         <div class="item item7 right">
           <div>
-            <img replaceSrc="collaboration" src="imgs/project-aerial-view.png" alt="">
+            <img replaceSrc="collaboration" src="imgs/placeholders/placeholder-img.jpg" alt="">
           </div>
           <div class="text-container">
             <h5>Present and share your project with multiple ways of interoperability</h5>
