Several changes including hover play gif.

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
       </div>
       <div class="item">
         <div>
-          <img replaceSrc="forestry" src="./imgs/what-is-for/forestry-enscape.jpg" alt="">          
+          <img replaceSrc="forestry" src="./imgs/what-is-for/forestry-enscape.png" alt="">          
         </div>
         <div class="text-container">
           <h5>Forestry</h5>
@@ -115,48 +115,48 @@
   <section id="whyUseLands" class="why-use-lands">
     <div class="content-width">
       <div class="grid">
-        <div class="item section-title">
+        <div class="section-title">
           <h3><span>Why use</span><span>Lands Design?</span></h3>
         </div>
-        <div class="item item1 right">
-          <div>
-            <img replaceSrc="terrains" src="./videos/TerrainOperations.gif" alt="">
+        <div class="item item1 right" data-name="terrains">
+          <div class="media-container">
+            <img replaceSrc="terrains" src="./imgs/terrainsPoster.png" alt="">
           </div>
           <div class="text-container">
             <h5>Powerful terrain modeling tools</h5>
             <p>Create terrains from contours, elevation curves and point clouds. Terrains can be also scanned and imported from the cloud by picking a location from a satellite map. Lands includes tools to modify terrains, add cuts and fills, paths, holes or calculate the volume of land movements. All this data is stored in the terrain and can be modified at any time.</p>
           </div>
         </div>
-        <div class="item item2">
-          <div>
-            <img replaceSrc="lim" src="./videos/LandsBIM.gif" alt="">
+        <div class="item item2" data-name="lim">
+          <div class="media-container">
+            <img replaceSrc="lim" src="./imgs/limPoster.png" alt="">
           </div>
           <div class="text-container">
             <h5>BIM/LIM (Landscape Information Modeling) in your project</h5>
             <p>Lands provides smart objects, such as vegetation elements, civil work objects and terrains that can be easily edited and documented in quantity take-offs. Lands provides tools to produce 2D technical drawings that are always linked to the 3D model and to the related lists and documentations.</p>
           </div>
         </div>
-        <div class="item item3 right">
-          <div>
-            <img replaceSrc="plantDatabase" src="./videos/LandsPlantsDatabase.gif" alt="">
+        <div class="item item3 right" data-name="plants">
+          <div class="media-container">
+            <img replaceSrc="plants" src="./imgs/plants.jpg" alt="">
           </div>
           <div class="text-container">
             <h5>Extensive plant database in 3D / 2D</h5>
             <p>Lands provides a plant database with more than 1800 species. You can select the ideal plant for your site by filtering the list according to specific criteria: climate, type of soil, wind resistance, maritime conditions, flowering and fructification, etc.<br>Each plant species has its own customizable display modes in 2D and 3D and they are ready for rendering, exporting plans, and season and growth simulation.</p>
           </div>
         </div>
-        <div class="item item4">
-          <div>
-            <img replaceSrc="dynamicDoc" src="imgs/placeholders/placeholder-img.jpg" alt="">
+        <div class="item item4" data-name="documentation">
+          <div class="media-container">
+            <img replaceSrc="documentation" src="./imgs/documentation.png" alt="">
           </div>
           <div class="text-container">
             <h5>Generate dynamic 2D documentation</h5>
             <p>Turn your 2D sketch into a 3D project ready for visualization. Generate 2D technical plans from the 3D model and add dimensions, labels, tags, plant photos and other annotations to get the project ready for documentation. Produce different layouts such as setting out plan, irrigation, and dimension plan by using the layer manager to organize your project. Use the listing tools to generate quantity take-offs for plants, urban furniture elements, zones or volume of cuts and fills from terrain operations.</p>
           </div>
         </div>
-        <div class="item item5 right">
-          <div>
-            <img replaceSrc="parametricDesign" src="./videos/LandsParametricDesign.gif" alt="">
+        <div class="item item5 right" data-name="parametric">
+          <div class="media-container">
+            <img replaceSrc="parametric" src="./imgs/parametric.png" alt="">
           </div>
           <div class="text-container">
             <h5>Parametric design</h5>
@@ -164,18 +164,18 @@
           </div>
         </div>
 
-        <div class="item item6">
-          <div>
-            <img replaceSrc="liveTheProject" src="imgs/placeholders/placeholder-img.jpg" alt="">
+        <div class="item item6" data-name="presentation">
+          <div class="media-container">
+            <img replaceSrc="presentation" src="./imgs/presentation.jpg" alt="">
           </div>
           <div class="text-container">
             <h5>"Live" your project with animated videos and realistic images</h5>
             <p>Present your project with realistic images, virtual tours and animated videos. Walk through the project, play vegetation season change simulation, enable sunlight motion, wind effect and plant growth. In addition, you may apply your desired render engine like Enscape, Lumion, V-Ray, etc.</p>
           </div>
         </div>
-        <div class="item item7 right">
-          <div>
-            <img replaceSrc="collaboration" src="imgs/placeholders/placeholder-img.jpg" alt="">
+        <div class="item item7 right" data-name="collaboration">
+          <div class="media-container">
+            <img replaceSrc="collaboration" src="imgs/interoperability.png" alt="">
           </div>
           <div class="text-container">
             <h5>Present and share your project with multiple ways of interoperability</h5>
