Banner and questions section adapted for very wide screens.

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
       </div>
       <div class="item">
         <div>
-          <img replaceSrc="greenInfrastructure" src="./imgs/what-is-for/green-infrastructure.jpeg" alt="">
+          <img replaceSrc="greenInfrastructure" src="./imgs/what-is-for/green-infrastructure.jpg" alt="">
         </div>
         <div class="text-container">
           <h5>Green infraestructure</h5>
@@ -178,7 +178,7 @@
             <img replaceSrc="collaboration" src="imgs/interoperability.png" alt="">
           </div>
           <div class="text-container">
-            <h5>Present and share your project with multiple ways of interoperability</h5>
+            <h5>Multiple ways of interoperability</h5>
             <p>The multiple file formats supported by Lands Design let you import and export files with other platforms. Many block libraries from the web are compatible and can be easily integrated into your project. In this way, you can bring your project into a virtual reality environment, send it to a 3D printer or export it to web browsers, so you can share your project with anyone to visualize it by his/her own device.</p>
           </div>
         </div>
