Url for resources updated to landsdesign.com

--- a/src/index.html
+++ b/src/index.html
@@ -69,8 +69,8 @@
           <img replaceSrc="landscapeArch" src="./imgs/what-is-for/big-park.jpg" alt="">
         </div>
         <div class="text-container">
-          <h5>Landscape architecture</h5>
-          <p>Landscape design projects in different scales and sectors can be easily provided by Lands Design. It's your powerful tool in design process from generating 2D layouts, to 3D models and realistic images and videos.</p>
+          <h5>Landscape Architecture</h5>
+          <p>Landscape design projects in different scales and sectors can be easily provided by Lands Design. It's your powerful tool in the design process for generating 2D layouts, 3D models and realistic images and videos.</p>
         </div>
       </div>
       <div class="item">
@@ -78,8 +78,8 @@
           <img replaceSrc="greenInfrastructure" src="./imgs/what-is-for/green-infrastructure.jpg" alt="">
         </div>
         <div class="text-container">
-          <h5>Green infraestructure</h5>
-          <p>Natural areas can act as an infrastructure, protecting built environment from pollutions, water flooding or excessive heat. Lands Design gives you the power to add vertical gardens, green roofs and green areas to your architectural and civil engineering projects.</p>
+          <h5>Green Infraestructure</h5>
+          <p>Natural areas can act as an infrastructure, protecting the built environment from pollutions, water flooding or excessive heat. Lands Design gives you the power to add vertical gardens, green roofs and green areas to your architectural and civil engineering projects.</p>
         </div>
       </div>
       <div class="item">
@@ -88,7 +88,7 @@
         </div>
         <div class="text-container">
           <h5>Forestry</h5>
-          <p>The powerful terrain, forest and irrigation tools accompanied with hardscape tools, can be used in design process and modeling of forests in silviculture sector. BIM technology visualizes seasonal change and annual growth of planted areas.</p>
+          <p>The powerful terrain, forest and irrigation tools accompanied with hardscape tools, can be used in design process and modeling of forests in silviculture sector. BIM technology visualizes seasonal change and annual growth of plants.</p>
         </div>
       </div>
       <div class="item">
@@ -96,8 +96,8 @@
           <img replaceSrc="urbanPlanning" src="./imgs/what-is-for/urban-planning.jpg" alt="">
         </div>
         <div class="text-container">
-          <h5>Urban planning</h5>
-          <p>Urban vegetation plays a key role in improving the quality of built environment. For introducing plants as essential natural elements in urban planning projects, Lands Design helps you to design public spaces joint with green areas, lets you choose the adequate plant selection and visualize the urban area in different seasons.</p>
+          <h5>Urban Planning</h5>
+          <p>Urban vegetation plays a key role in improving the quality of the built environment. In introducing plants as essential natural elements in urban planning projects, Lands Design helps you to design public spaces, joint with green areas, lets you choose the adequate plant selection and visualize the urban area in different seasons.</p>
         </div>
       </div>
       <div class="item">
@@ -106,7 +106,7 @@
         </div>
         <div class="text-container">
           <h5>CG Artists</h5>
-          <p>Lands Design can be applied for generating an environment for computer graphics (CG) artists. You can create 2D and 3D game assets to be used in developing video games 3D visualization, and digitally animated films.</p>
+          <p>Lands Design can be applied for generating an environment for computer graphics (CG) artists. You can create 2D and 3D game assets to be used in developing video games, 3D visualization, and digitally animated films.</p>
         </div>
       </div>
     </div>
@@ -123,7 +123,7 @@
             <img replaceSrc="terrains" src="./imgs/terrainsPoster.png" alt="">
           </div>
           <div class="text-container">
-            <h5>Powerful terrain modeling tools</h5>
+            <h5>Powerful Terrain Modeling Tools</h5>
             <p>Create terrains from contours, elevation curves and point clouds. Terrains can be also scanned and imported from the cloud by picking a location from a satellite map. Lands includes tools to modify terrains, add cuts and fills, paths, holes or calculate the volume of land movements. All this data is stored in the terrain and can be modified at any time.</p>
           </div>
         </div>
@@ -132,7 +132,7 @@
             <img replaceSrc="lim" src="./imgs/limPoster.png" alt="">
           </div>
           <div class="text-container">
-            <h5>BIM/LIM (Landscape Information Modeling) in your project</h5>
+            <h5>BIM/LIM (Landscape Information Modeling) in your Project</h5>
             <p>Lands provides smart objects, such as vegetation elements, civil work objects and terrains that can be easily edited and documented in quantity take-offs. Lands provides tools to produce 2D technical drawings that are always linked to the 3D model and to the related lists and documentations.</p>
           </div>
         </div>
@@ -141,8 +141,8 @@
             <img replaceSrc="plants" src="./imgs/plants.jpg" alt="">
           </div>
           <div class="text-container">
-            <h5>Extensive plant database in 3D / 2D</h5>
-            <p>Lands provides a plant database with more than 1800 species. You can select the ideal plant for your site by filtering the list according to specific criteria: climate, type of soil, wind resistance, maritime conditions, flowering and fructification, etc.<br>Each plant species has its own customizable display modes in 2D and 3D and they are ready for rendering, exporting plans, and season and growth simulation.</p>
+            <h5>Extensive Plant Database in 3D / 2D</h5>
+            <p>Lands provides a plant database with more than 1800 species. You can select the ideal plant for your site by filtering the list according to specific criteria: climate, type of soil, wind resistance, flowering and fructification, etc.<br>Each plant species has its own customizable display modes in 2D and 3D and they are ready for rendering, exporting plans, and season and growth simulation.</p>
           </div>
         </div>
         <div class="item item4" data-name="documentation">
@@ -150,7 +150,7 @@
             <img replaceSrc="documentation" src="./imgs/documentation.png" alt="">
           </div>
           <div class="text-container">
-            <h5>Generate dynamic 2D documentation</h5>
+            <h5>Generate Dynamic 2D Documentation</h5>
             <p>Turn your 2D sketch into a 3D project ready for visualization. Generate 2D technical plans from the 3D model and add dimensions, labels, tags, plant photos and other annotations to get the project ready for documentation. Produce different layouts such as setting out plan, irrigation, and dimension plan by using the layer manager to organize your project. Use the listing tools to generate quantity take-offs for plants, urban furniture elements, zones or volume of cuts and fills from terrain operations.</p>
           </div>
         </div>
@@ -159,7 +159,7 @@
             <img replaceSrc="parametric" src="./imgs/parametric.png" alt="">
           </div>
           <div class="text-container">
-            <h5>Parametric design</h5>
+            <h5>Parametric Design</h5>
             <p>Automate design workflows with vegetation, terrains and civil work elements. Save time by avoiding repetitive tasks, create custom functionalities and test different design options faster.<br>All this is achieved with Grasshopper, a visual programming environment available in the Lands Design version for Rhino.</p>
           </div>
         </div>
@@ -169,7 +169,7 @@
             <img replaceSrc="presentation" src="./imgs/presentation.jpg" alt="">
           </div>
           <div class="text-container">
-            <h5>"Live" your project with animated videos and realistic images</h5>
+            <h5>Bring your Project to Life with Animated Videos and Realistic Images</h5>
             <p>Present your project with realistic images, virtual tours and animated videos. Walk through the project, play vegetation season change simulation, enable sunlight motion, wind effect and plant growth. In addition, you may apply your desired render engine like Enscape, Lumion, V-Ray, etc.</p>
           </div>
         </div>
@@ -178,8 +178,8 @@
             <img replaceSrc="collaboration" src="imgs/interoperability.png" alt="">
           </div>
           <div class="text-container">
-            <h5>Multiple ways of interoperability</h5>
-            <p>The multiple file formats supported by Lands Design let you import and export files with other platforms. Many block libraries from the web are compatible and can be easily integrated into your project. In this way, you can bring your project into a virtual reality environment, send it to a 3D printer or export it to web browsers, so you can share your project with anyone to visualize it by his/her own device.</p>
+            <h5>Multiple Ways of Interoperability</h5>
+            <p>The multiple file formats supported by Lands Design let you import and export files with other platforms. Many block libraries from the web are compatible and can be easily integrated into your project. In this way, you can bring your project into a virtual reality environment, send it to a 3D printer or export it to web browsers, so you can share your project with others to visualize it by their own device.</p>
           </div>
         </div>
         <div class="item8 btn-container">
@@ -191,7 +191,7 @@
 
   <section class="platforms">
     <div class="content-width">
-      <h3 class="section-title">Lands Design is available for Rhino and AutoCAD</h3>
+      <h3 class="section-title">Lands Design is Available for Rhino and AutoCAD</h3>
       <p>Lands Design works on top of Rhino and AutoCAD and takes advantage of all their features to complete all stages of a landscape project.</p>
       <div class="platforms-columns">
         <div class="left-col">
