Fixed typo on anchor href due to change on landsdesign domain name.

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         <h2>ADVANCED SOLUTION<br>FOR LANDSCAPE DESIGN</h2>
         <h3>BIM TECHNOLOGY FROM 2D TECHNICAL DRAWINGS<br>TO 3D MODELING AND PHOTOREALISTIC RENDERING</h3>
       </div>
-      <a id="tryLandsHomeBtn" class="fixed" href="https://stg.lands-design.com/download/">Try Lands Design</a>
+      <a id="tryLandsHomeBtn" class="fixed" href="https://stg.landsdesign.com/download/">Try Lands Design</a>
     </div>
   </section>
 
@@ -86,7 +86,7 @@
       </div>
       <div class="item">
         <div class="media-container">
-          <img replaceSrc="forestry" src="./imgs/what-is-for/forestry-enscape.png" alt="">          
+          <img replaceSrc="forestry" src="./imgs/what-is-for/forestry-enscape.png" alt="">
           <span>Enscape for Rhino</span>
         </div>
         <div class="text-container">
@@ -187,7 +187,7 @@
           </div>
         </div>
         <div class="item8 btn-container">
-          <a href="https://stg.lands-design.com/features/" class="official-btn">View all features</a>
+          <a href="https://stg.landsdesign.com/features/" class="official-btn">View all features</a>
         </div>
       </div>
     </div>
@@ -240,7 +240,7 @@
         </div>
       </div>
       <div class="btn-container">
-        <a href="https://stg.lands-design.com/features/comparison-table/" class="official-btn">Comparison table</a>
+        <a href="https://stg.landsdesign.com/features/comparison-table/" class="official-btn">Comparison table</a>
       </div>
     </div>
   </section>
