Replaced "official-btn" for "theme-button"
This helps to remove that were added to this
page to style the buttons and use instead the
same styles that will be available in the website.

--- a/src/index.html
+++ b/src/index.html
@@ -187,7 +187,7 @@
           </div>
         </div>
         <div class="item8 btn-container">
-          <a href="https://stg.landsdesign.com/features/" class="official-btn">View all features</a>
+          <a href="https://stg.landsdesign.com/features/" class="theme-button">View all features</a>
         </div>
       </div>
     </div>
@@ -283,7 +283,7 @@
         </div>
       </div>
       <div class="btn-container">
-        <a href="https://stg.landsdesign.com/features/comparison-table/" class="official-btn">Comparison table</a>
+        <a href="https://stg.landsdesign.com/features/comparison-table/" class="theme-button">Comparison table</a>
       </div>
     </div>
   </section>
@@ -314,7 +314,7 @@
         </div>
       </div>
       <div class="btn-container">
-        <a href="" class="official-btn">Visit the gallery</a>
+        <a href="" class="theme-button">Visit the gallery</a>
       </div>
     </div>
   </section>
