Added extra content into the headings section and its corresponding styles.

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,10 @@
         <h1>Lands Design</h1>
         <h2>ADVANCED SOLUTION<br>FOR LANDSCAPE DESIGN</h2>
         <h3>BIM TECHNOLOGY FOR 2D TECHNICAL DRAWINGS,<br>3D MODELING AND PHOTOREALISTIC RENDERING</h3>
+        <div class="extra-info">
+          <h3>Now also for Rhino7!</h3>
+          <small>Lands Design works on Rhino 6 and 7, and AutoCAD 2015 to 2021</small>
+        </div>
       </div>
       <a id="tryLandsHomeBtn" class="fixed" href="https://stg.landsdesign.com/download/">Try Lands Design</a>
     </div>
