Added new style for heading subititle.

--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,10 @@
       <div class="text-content">
         <h1>Lands Design</h1>
         <h2>ADVANCED SOLUTION<br>FOR LANDSCAPE DESIGN</h2>
-        <h3>BIM TECHNOLOGY FOR 2D TECHNICAL DRAWINGS,<br>3D MODELING AND PHOTOREALISTIC RENDERING</h3>
+        <h3><span>BIM Technology for 2D</span> <span>Technical Drawings,</span><br><span>3D Modeling and</span> <span>Photorealistic Rendering</span></h3>
         <div class="extra-info">
-          <h3>Now also for Rhino7!</h3>
-          <small>Lands Design works on Rhino 6 and 7, and AutoCAD 2015 to 2021</small>
+          <small><span>Lands Design Works on Rhino 6-7,</span> <span>and AutoCAD 2015-2021</span></small>
+          <h3><span>Now Available</span> <span>for Rhino 7!</span></h3>
         </div>
       </div>
       <a id="tryLandsHomeBtn" class="fixed" href="https://stg.landsdesign.com/download/">Try Lands Design</a>
