change on main try button content and fixed typo

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
           <h3><span>Now Available</span> <span>for Rhino 7!</span></h3>
         </div>
       </div>
-      <a id="tryLandsHomeBtn" class="fixed" href="https://stg.landsdesign.com/download/">Try Lands Design</a>
+      <a id="tryLandsHomeBtn" class="fixed" href="https://stg.landsdesign.com/download/">90 days free trial</a>
     </div>
   </section>
 
@@ -84,7 +84,7 @@
           <span>Lands Design + Enscape</span>
         </div>
         <div class="text-container">
-          <h5>Green Infraestructure</h5>
+          <h5>Green Infrastructure</h5>
           <p>Natural areas can act as an infrastructure, protecting the built environment from pollutions, water flooding or excessive heat. Lands Design gives you the power to add vertical gardens, green roofs and green areas to your architectural and civil engineering projects.</p>
         </div>
       </div>
