just added some comments

--- a/src/index.html
+++ b/src/index.html
@@ -307,6 +307,7 @@
   <section class="standard-section bg-light-gray">
     <div class="content-width">
       <h3 class="section-title">Latest News</h3>
+      <!-- replace the div below with: [latest_news] -->
       <div class="items-container">
         <a href="#" class="item">
           <div>
@@ -327,9 +328,9 @@
           <h5>News 3</h5>
         </a>
       </div>
-      <!-- <div class="btn-container">
+      <div class="btn-container">
         <a href="https://stg.landsdesign.com/blog/" class="theme-button">View all news</a>
-      </div> -->
+      </div>
     </div>
   </section>
 
@@ -338,6 +339,7 @@
   <section class="standard-section">
     <div class="content-width">
       <h3 class="section-title">Latest Projects</h3>
+      <!-- replace the div below with: [latest_projects] -->
       <div class="items-container">
         <a href="#" class="item">
           <div>
